Working on openapi and search mapper